<resources>
    <string name="app_name">TestMenu</string>

    <string name="title_section1">Feuille de route</string>
    <string name="title_section2">Supprimer patient</string>
    <string name="title_section3">Attribution</string>
    <string name="title_section4">Déconnexion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="action_suppression">Supprimer</string>
    <string name="action_location">Localisation</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="menu2Text">Suppression</string>
    <string name="menu3Text">Attribution</string>
    <string name="title_activity_information">InformationActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="NomText">Durant</string>
    <string name="TelephoneTexte">080315561</string>
    <string name="AdresseTexte">Rue Joseph Calozet 15, 5000 Namur</string>
    <string name="dateNaissanceTexte">27/06/1959</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">nurseAgenda</string>
    <string name="Valider">Valider</string>
    <string name="textNurse">Infirmier(e)</string>
    <string name="textPatient">Patient</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noConnection">NO CONNECTION</string>
    <string name="title_activity_splash_screen">splashScreen</string>

</resources>
